Fixed a few links and other issues

--- a/book/Cover.html
+++ b/book/Cover.html
@@ -97,7 +97,7 @@ Start content ##############################################################
 <div class="dossier-start-bg">
 <!--(if you want to place something on top of the picture, place it here-->
 
-<a href="01.html"><img src="images/cover/cover-typo.png" /></a>
+<a href="Introduction.html"><img src="images/cover/cover-typo.png" /></a>
 
 </div><!-- Div dossier-start-bg-->
  
