--- a/book/Interactivity.html
+++ b/book/Interactivity.html
@@ -116,12 +116,12 @@ Start dossier navigation in navigation bar #################################
 <div id="includeLogoAndCoverlink" csi:src="inc/logo-coverlink.html"></div>
 
 <!--Link to the next dossier-->
-<a href="03.html" class="nav-button next">
+<a href="Structure_and_Columns.html" class="nav-button next">
 	<div class="nav-button-text">Next Dossier</div>
 </a>
 
 <!--Link to the previous dossier-->
-<a href="01.html" class="nav-button prev">
+<a href="Introduction.html" class="nav-button prev">
 	<div class="nav-button-text">Previous Dossier</div>
 </a>
 
