--- a/book/Structure_and_Columns.html
+++ b/book/Structure_and_Columns.html
@@ -108,13 +108,13 @@ Start dossier navigation in navigation bar #################################
 <!--Include the small logo and the cover link-->
 <div id="includeLogoAndCoverlink" csi:src="inc/logo-coverlink.html"></div>
 
-<!--Link to the next dossier. (It's the last page, so we won't need that.)
-<a href="02.html" class="nav-button next">
+<!--Link to the next dossier.-->
+<a href="Maps.html" class="nav-button next">
 	<div class="nav-button-text">Next Dossier</div>
-</a>-->
+</a>
 
 <!--Link to the previous dossier-->
-<a href="02.html" class="nav-button prev">
+<a href="Interactivity.html" class="nav-button prev">
 	<div class="nav-button-text">Previous Dossier</div>
 </a>
 
