--- a/book/inc/logo-coverlink.html
+++ b/book/inc/logo-coverlink.html
@@ -16,6 +16,6 @@ in every dossier-HTML via Javascript.
 <div class="logo-small"><img src="images/nav/logo-small.png" width="57" height="16" alt="logo" /></div>
 
 <!--Cover Link-->
-<a href="001.html" class="nav-button cover">
+<a href="Cover.html" class="nav-button cover">
 	<div class="nav-button-text">Cover</div>
 </a>
