--- a/book/inc/toc.html
+++ b/book/inc/toc.html
@@ -43,4 +43,11 @@ via CSS.
 			<p>Structure &amp; Columns</p>
 			</a><!--Link toc-dossier-->
 			
+			<a class="toc-dossier" href="Maps.html">
+			<div class="toc-dossier-number">4</div>
+			<img class="toc-thumb" src="images/dossier-04/toc-thumb.jpg" />
+			<h1>Dossier 4</h1>
+			<p>Google Maps</p>
+			</a><!--Link toc-dossier-->
+			
 </div><!--Div Hyphenate-->
