--- a/book/Introduction.html
+++ b/book/Introduction.html
@@ -108,7 +108,7 @@ Start dossier navigation in navigation bar #################################
 <div id="includeLogoAndCoverlink" csi:src="inc/logo-coverlink.html"></div>
 
 <!--Link to the next dossier-->
-<a href="02.html" class="nav-button next">
+<a href="Interactivity.html" class="nav-button next">
 	<div class="nav-button-text">Next Dossier</div>
 </a>
 
