--- a/book/index.html
+++ b/book/index.html
@@ -18,7 +18,7 @@ doubletap on iOS devices.
 <meta charset="utf-8">
 
 <!--Prevent pinch to zoom on iOS devices-->
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;" />
+<meta name="viewport" content="width = 1024px; height = 205px; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;" />
 <meta name="viewport" content="100%" />
 
 
@@ -46,8 +46,9 @@ Stylesheets ################################################################
 
 
 
-<body class="body-toc-ios">
+<body>
 
+<div class="body-toc-ios">
 <!--Enable text hyphenation with Hyphenator.js-->
 <div class="hyphenate">
 
@@ -57,7 +58,7 @@ Stylesheets ################################################################
       </div><!--Div toc-->
       
 </div><!--Div hyphenate-->
-
+</div>
 
 </body>
 </html>
