More TOC iPAd Fixes

--- a/book/index.html
+++ b/book/index.html
@@ -46,9 +46,9 @@ Stylesheets ################################################################
 
 
 
-<body>
+<body class="body-toc-ios">
 
-<div class="body-toc-ios">
+<div class="wrapper-toc-ios">
 <!--Enable text hyphenation with Hyphenator.js-->
 <div class="hyphenate">
 
