Fixed some iOS TOC Erros

--- a/book/index.html
+++ b/book/index.html
@@ -18,7 +18,7 @@ doubletap on iOS devices.
 <meta charset="utf-8">
 
 <!--Prevent pinch to zoom on iOS devices-->
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;" />
+<meta name="viewport" content="width=1024, height=197, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 
 
